add navlink w/ route to nav-items

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -20,3 +20,13 @@
   margin: 0;
   padding-top: 15px;
 }
+
+.nav-item-navlink {
+  color: white;
+  text-decoration: none;
+}
+
+.nav-item-navlink:hover {
+  color: white;
+  text-decoration: underline;
+}
